--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Capacity Count</title>
         <style>
-            button { background: palevioletred; color: white; font-weight: 700; padding: 6px; margin: 3px; border: none }
+            button { background: pink; color: white; font-weight: 700; padding: 6px; margin: 3px; border: none }
         </style>
     </head>
     <body style='font-family:Arial, Helvetica, sans-serif'>
