--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
         <script>
             let value = 0
 
+            // UPDATE THE COUNT
             function updateCounter(countObject) {
                 let counterSpan = document.getElementById('counter')
                 counterSpan.innerHTML = countObject.count
