change wording on h1

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
         </style>
     </head>
     <body style='font-family:Arial, Helvetica, sans-serif'>
-        <h1>Capacity Counter</h1>
+        <h1>Increase/Decrease Counter</h1>
         <div style='margin-bottom: 6px'>
             Current Count: <span id='counter'></span>
         </div>
@@ -54,7 +54,7 @@
                 updateCounter()
             }
             
-            setInterval(getLatestCount, 3000)
+            setInterval(getLatestCount, 3000) 
         </script>
     </body>
 </html>
